# Kinematics_Arm

./: About_intial.md  D-H  D-H.CPP  README.md
QT_INterface/Kinematics_Arm/: CMakeLists.txt  Kinematics_Arm_en_GB.ts  arm_sys.cpp  arm_sys.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_INterface/build-Kinematics_Arm-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
QT_INterface/build-Kinematics_Arm-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-ed20caecffc7f2f035c5.json  cmakeFiles-v1-4ca3deccc78817207f8b.json  cmakeFiles-v1-98b57ec80dfcbbeeb641.json  codemodel-v2-c4670485d784c2315a9d.json  codemodel-v2-e8f9cc7191dc8086cade.json  index-2024-05-18T21-01-07-0555.json  index-2024-05-19T18-11-00-0107.json  target-Kinematics_Arm-Debug-1808d413a136635c4689.json  target-Kinematics_Arm-Debug-4f3f4f6a30bc8333e48b.json  target-Kinematics_Arm_autogen-Debug-15b9090daa18f738c171.json  target-Kinematics_Arm_autogen_timestamp_deps-Debug-5e6ac805ffe0027e8f40.json
QT_INterface/build-Kinematics_Arm-Desktop-Debug/Kinematics_Arm_autogen/: deps
QT_INterface/build-Kinematics_Arm-Desktop-Debug/Kinematics_Arm_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
QT_INterface/build-Kinematics_Arm-Desktop-Debug/Kinematics_Arm_autogen/include/: ui_mainwindow.h
